--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -1,171 +1,186 @@
-.checkout_coupon {
-  display: flex;
-  flex-direction: column;
-
-  input {
-    border: none;
-    border-radius: 2px;
-    padding: 0.5em;
-  }
-
-  button {
-    @include button();
-  }
-}
-
-.checkout {
-  margin-top: 4em;
-  padding: 3em 4em;
+.woocommerce {
+  min-height: calc(100vh - 4em);
+  width: 100vw;
+  background: linear-gradient(
+    90deg,
+    rgba(230, 204, 178, 1) 0%,
+    rgba(208, 200, 167, 1) 100%
+  );
+  padding: 8em 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2em;
-  background-color: rgba(245, 245, 245, 0.3);
-  border-radius: 5px;
-  box-shadow: 0 0 6px gray;
-  width: 90%;
 
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  #customer_details {
+  .checkout_coupon {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 4em;
-    width: 100%;
+    flex-direction: column;
 
-    .woocommerce-billing-fields,
-    .woocommerce-shipping-fields {
-      h3 {
-        margin-bottom: 4em;
-        font-size: 1.5rem;
-        text-align: center;
-        text-transform: capitalize;
-      }
-
-      .form-row {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-
-        label {
-          margin-bottom: 0.5em;
-        }
-
-        .woocommerce-input-wrapper {
-          margin-top: 0.5em;
-        }
-
-        label {
-          font-size: 1.25rem;
-        }
-
-        input {
-          font-size: 1.25rem;
-          padding: 0.5em;
-          border-bottom: 0.5px solid;
-          border-top: none;
-          border-right: none;
-          border-left: none;
-          background-color: transparent;
-          outline: none;
-          width: 100%;
-          -webkit-appearance: none;
-          appearance: none;
-          -webkit-border-radius: 0;
-          border-radius: 0;
-        }
-      }
+    input {
+      border: none;
+      border-radius: 2px;
+      padding: 0.5em;
     }
 
-    .woocommerce-additional-fields {
-      width: 100%;
-
-      .notes {
-        display: flex;
-        flex-direction: column;
-        gap: 1em;
-
-        textarea {
-          width: 100%;
-          height: 8em;
-          padding: 0.5em;
-          resize: none;
-          border-radius: 2px;
-          border: none;
-        }
-      }
+    button {
+      @include button();
     }
   }
 
-  h3 {
-    margin-bottom: 2em;
-    font-size: 1.5rem;
-    text-transform: capitalize;
-  }
-
-  #order_review {
+  .checkout {
+    margin-top: 4em;
+    padding: 3em 4em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 2em;
+    background-color: rgba(245, 245, 245, 0.3);
+    border-radius: 5px;
+    box-shadow: 0 0 6px gray;
+    width: 90%;
 
-    table {
-      border-collapse: collapse;
-      width: 90%;
-      background-color: rgba(245, 245, 245, 0.3);
-      border-radius: 5px;
-      box-shadow: 0 0 6px gray;
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
 
-      tr,
-      th,
-      td {
-        border: 0.5px solid;
-        text-align: center;
-        padding: 1em;
+    #customer_details {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 4em;
+      width: 100%;
+
+      .woocommerce-billing-fields,
+      .woocommerce-shipping-fields {
+        h3 {
+          margin-bottom: 4em;
+          font-size: 1.5rem;
+          text-align: center;
+          text-transform: capitalize;
+        }
+
+        .form-row {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+
+          label {
+            margin-bottom: 0.5em;
+          }
+
+          .woocommerce-input-wrapper {
+            margin-top: 0.5em;
+          }
+
+          label {
+            font-size: 1.25rem;
+          }
+
+          input {
+            font-size: 1.25rem;
+            padding: 0.5em;
+            border-bottom: 0.5px solid;
+            border-top: none;
+            border-right: none;
+            border-left: none;
+            background-color: transparent;
+            outline: none;
+            width: 100%;
+            -webkit-appearance: none;
+            appearance: none;
+            -webkit-border-radius: 0;
+            border-radius: 0;
+          }
+        }
       }
 
-      th {
-        text-transform: uppercase;
+      .woocommerce-additional-fields {
+        width: 100%;
+
+        .notes {
+          display: flex;
+          flex-direction: column;
+          gap: 1em;
+
+          textarea {
+            width: 100%;
+            height: 8em;
+            padding: 0.5em;
+            resize: none;
+            border-radius: 2px;
+            border: none;
+          }
+        }
       }
     }
 
-    .woocommerce-checkout-payment {
+    h3 {
+      margin-bottom: 2em;
+      font-size: 1.5rem;
+      text-transform: capitalize;
+    }
+
+    #order_review {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 3em;
+      gap: 2em;
 
-      li {
-        text-align: center;
+      table {
+        border-collapse: collapse;
+        width: 90%;
+        background-color: rgba(245, 245, 245, 0.3);
+        border-radius: 5px;
+        box-shadow: 0 0 6px gray;
+
+        tr,
+        th,
+        td {
+          border: 0.5px solid;
+          text-align: center;
+          padding: 1em;
+        }
+
+        th {
+          text-transform: uppercase;
+        }
       }
 
-      .place-order {
+      .woocommerce-checkout-payment {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 3em;
 
-        p {
+        li {
           text-align: center;
         }
 
-        button {
-          @include button();
-          font-weight: bold;
-          width: 20em;
-          background-color: $secondary-color;
-          box-shadow: 0 3px 2px -2px gray;
-          padding: 1em;
+        .place-order {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 3em;
+
+          p {
+            text-align: center;
+          }
+
+          button {
+            @include button();
+            font-weight: bold;
+            width: 20em;
+            background-color: $secondary-color;
+            box-shadow: 0 3px 2px -2px gray;
+            padding: 1em;
+          }
         }
       }
     }
