--- a/css/style.scss
+++ b/css/style.scss
@@ -78,21 +78,11 @@ body {
     @import './components/404';
   }
 
-  .woocommerce {
-    min-height: calc(100vh - 4em);
-    width: 100vw;
-    background: linear-gradient(
-      90deg,
-      rgba(230, 204, 178, 1) 0%,
-      rgba(208, 200, 167, 1) 100%
-    );
-    padding: 8em 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+  &.woocommerce-cart {
     @import 'components/cart';
+  }
+
+  &.woocommerce-checkout {
     @import 'components/checkout';
   }
 
@@ -102,6 +92,59 @@ body {
   /* Remove sidebar single product page */
   #sidebar {
     display: none;
+  }
+
+  /* My Account Page */
+  &.woocommerce-account {
+    @import 'components/account';
+  }
+
+  .woocommerce {
+    .woocommerce-notices-wrapper {
+      display: none;
+    }
+
+    h2 {
+      display: none;
+    }
+
+    .woocommerce-form-login {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .woocommerce-form-row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+
+        input {
+          border: none;
+          border-radius: 2px;
+          padding: 0.5em;
+          width: 15em;
+        }
+      }
+
+      .form-row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+      }
+
+      button {
+        width: 15em;
+        border: none;
+        border-radius: 2px;
+        padding: 1em;
+        font-weight: bold;
+      }
+    }
   }
 }
 
