--- a/css/components/_account.scss
+++ b/css/components/_account.scss
@@ -14,6 +14,8 @@
     flex: 1 0 0;
 
     ul {
+      padding: 0 2em;
+
       li {
         list-style-type: none;
         background-color: rgba(245, 245, 245, 0.3);
@@ -40,7 +42,12 @@
     }
   }
 
-  div {
+  .woocommerce-MyAccount-content {
+    padding: 0 12em 0 0;
     flex: 1 0 0;
+
+    a {
+      text-decoration: underline;
+    }
   }
 }
